--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,35 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&subset=cyrillic");
-p, a, li {
+p, span, li, a {
   font-family: 'Comfortaa';
 }
 
-nav {
-  background: #B7C8D3;
+html {
+  background-color: #CCDDE8;
+  font-size: 14px;
+}
+
+body {
+  font-size: 16px;
+}
+
+body .navbar {
+  background-color: #B7C8D3;
+  padding: 0.3rem 2rem;
+}
+
+body .navbar .number-phone {
+  color: #006894;
+}
+
+body .navbar .navbar-nav li.nav-item > a.nav-link {
+  color: #000000e6;
+}
+
+body .navbar .navbar-nav li.nav-item > a.nav-link:hover {
+  color: #008AC3;
+}
+
+body .navbar .navbar-nav li.active > a.nav-link {
+  color: #006894;
 }
 /*# sourceMappingURL=main.css.map */
