--- a/css/main.scss
+++ b/css/main.scss
@@ -1,14 +1,39 @@
-$primary-color-dark:   #B7C8D3;
-$primary-color:        #CCDDE8;
-$primary-color-light:  #EDECE8;
-$accent-color:         #4089C0;
-$primary-text-color:   #212121;
+$body-color-dark:    #B7C8D3;
+$body-color:         #CCDDE8;
+$body-color-light:   #EDECE8;
+$primary-color-light:#008AC3;
+$primary-color:      #006894;
+$primary-color-dark :#08478C;
+$text-color:         #000000e6;
+$second-text-color:         #00000080;
+
 @import url('https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&subset=cyrillic');
-p,a,li, {font-family: 'Comfortaa';}
-nav {
-    background: $primary-color-dark;
+p,span,li,a {font-family: 'Comfortaa';}
+html {
+    background-color: $body-color;
+    font-size: 14px;
 }
 
-a {
-    $primary-text-color
+body {
+    font-size: 16px;
+    .navbar {
+        background-color: $body-color-dark;
+        padding: 0.3rem 2rem;
+        .number-phone {
+            color: $primary-color;
+        }
+        .navbar-nav {
+            li.nav-item > a.nav-link {
+                color: $text-color;
+                &:hover {
+                    color: $primary-color-light;
+            }
+
+            }
+            li.active > a.nav-link {
+                color: $primary-color;
+            }
+        }
+    }
 }
+
