--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,89 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&subset=cyrillic");
-p, span, li, a {
+p, span, li, a, h1, h2, h3, h4 {
   font-family: 'Comfortaa';
 }
 
 html {
-  background-color: #CCDDE8;
   font-size: 14px;
+  padding: 0;
+  margin: 0;
 }
 
 body {
+  padding: 0;
+  margin: 0;
   font-size: 16px;
+  background: #CCDDE8;
 }
 
-body .navbar {
+body .container > nav {
   background-color: #B7C8D3;
-  padding: 0.3rem 2rem;
 }
 
-body .navbar .number-phone {
+body .container > nav .email > a {
+  padding: .35rem;
+  margin: 0 1rem;
+  border: 1px solid #006894;
+  border-radius: .3rem;
+}
+
+body .container > nav .email > a:hover {
+  border-color: #EDECE8;
+  color: #EDECE8;
+}
+
+body .container > nav .email > a i.fas {
+  font-size: 15px;
   color: #006894;
 }
 
-body .navbar .navbar-nav li.nav-item > a.nav-link {
+body .container > nav .email > a i.fas:hover {
+  color: #EDECE8;
+}
+
+body .container > nav .number-phone {
+  color: #006894;
+}
+
+body .container > nav .navbar-nav li.nav-item > a.nav-link {
   color: #000000e6;
 }
 
-body .navbar .navbar-nav li.nav-item > a.nav-link:hover {
+body .container > nav .navbar-nav li.nav-item > a.nav-link:hover {
   color: #008AC3;
 }
 
-body .navbar .navbar-nav li.active > a.nav-link {
+body .container > nav .navbar-nav li.active > a.nav-link {
   color: #006894;
 }
 
-body .navbar .navbar-nav li.nav-item > div.dropdown-menu {
+body .container > nav .navbar-nav li.nav-item > div.dropdown-menu {
   background-color: #B7C8D3;
   border: none;
 }
 
-body .navbar .navbar-nav div.dropdown-menu > a.dropdown-item:hover {
+body .container > nav .navbar-nav div.dropdown-menu > a.dropdown-item:hover {
   background-color: transparent;
   color: #006894;
+}
+
+body .container > .row {
+  background-color: #CCDDE8;
+  padding: 0;
+  margin: 0;
+}
+
+body .container > .row .col-sm-8 {
+  padding: 0;
+  margin: 0;
+}
+
+body .container > .row .col-sm-8 .carousel-item img {
+  height: 550px;
+}
+
+body .container > .row .col-sm-4 {
+  padding: 0;
+  margin: 0;
 }
 /*# sourceMappingURL=main.css.map */
