--- a/css/main.scss
+++ b/css/main.scss
@@ -1,42 +1,77 @@
-$body-color-dark:    #B7C8D3;
-$body-color:         #CCDDE8;
-$body-color-light:   #EDECE8;
+$body-color-dark: #B7C8D3;
+$body-color: #CCDDE8;
+$body-color-light: #EDECE8;
 $primary-color-light:#008AC3;
-$primary-color:      #006894;
+$primary-color: #006894;
 $primary-color-dark :#08478C;
-$text-color:         #000000e6;
-$second-text-color:  #00000080;
+$text-color: #000000e6;
+$second-text-color: #00000080;
 
 @import url('https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&subset=cyrillic');
-p,span,li,a {font-family: 'Comfortaa';}
+
+p,span,li,a, h1,h2,h3,h4 {
+    font-family: 'Comfortaa';
+}
+
 html {
-    background-color: $body-color;
     font-size: 14px;
+    padding: 0;
+    margin: 0;
 }
 
 body {
+    padding: 0;
+    margin: 0;
     font-size: 16px;
-    .navbar {
+    background: $body-color;
+
+    .container>nav {
         background-color: $body-color-dark;
-        padding: 0.3rem 2rem;
+
+        .email>a {
+            padding: .35rem;
+            margin: 0 1rem;
+            border: 1px solid $primary-color;
+            border-radius: .3rem;
+
+            &:hover {
+                border-color: $body-color-light;
+                color: $body-color-light;
+            }
+
+            i.fas {
+                font-size: 15px;
+                color: $primary-color;
+
+                &:hover {
+                    color: $body-color-light;
+                }
+            }
+        }
+
         .number-phone {
             color: $primary-color;
         }
+
         .navbar-nav {
-            li.nav-item > a.nav-link {
+            li.nav-item>a.nav-link {
                 color: $text-color;
+
                 &:hover {
                     color: $primary-color-light;
                 }
             }
-            li.active > a.nav-link {
+
+            li.active>a.nav-link {
                 color: $primary-color;
             }
-            li.nav-item > div.dropdown-menu {
+
+            li.nav-item>div.dropdown-menu {
                 background-color: $body-color-dark;
-                border:none;
+                border: none;
             }
-            div.dropdown-menu > a.dropdown-item {
+
+            div.dropdown-menu>a.dropdown-item {
                 &:hover {
                     background-color: transparent;
                     color: $primary-color;
@@ -45,5 +80,20 @@ body {
 
         }
     }
+    .container > .row {
+        background-color: $body-color;
+        padding: 0;
+        margin: 0;
+        .col-sm-8 {
+            padding: 0;
+            margin: 0;
+            .carousel-item img {
+                height: 550px;
+            }
+        }
+        .col-sm-4 {
+            padding: 0;
+            margin: 0;
+        }
+    }
 }
-
