--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ body footer .container .row .col-sm-6 > img {
   padding: 0 2rem;
 }
 
-body footer .container .row opzht {
-  height: 110px;
+body footer .container .row img.opzht {
+  height: 90px;
 }
 /*# sourceMappingURL=main.css.map */
