--- a/css/main.scss
+++ b/css/main.scss
@@ -231,8 +231,8 @@ body {
                     padding: 0 2rem;
                 }
 
-                opzht {
-                    height: 110px;
+                img.opzht {
+                    height: 90px;
                 }
             }
         }
