--- a/css/main.scss
+++ b/css/main.scss
@@ -166,6 +166,7 @@ body {
     #accordion {
         .card {
             background-color: $body-color;
+            border: none;
 
             .card-header {
                 background-color: $body-color;
@@ -197,17 +198,17 @@ body {
 
                             @media (min-width: 319px) {
                                 .img-rgv {
-                                    height: 200px;
+                                    height: 205px;
                                 }
                             }
                             @media (min-width: 374px) {
                                 .img-rgv {
-                                    height: 230px;
+                                    height: 235px;
                                 }
                             }
                             @media (min-width: 767px) {
                                 .img-rgv {
-                                    height: 160px;
+                                    height: 165x;
                                 }
                             }
                             @media (min-width: 1024px) {
