--- a/css/main.css
+++ b/css/main.css
@@ -268,8 +268,50 @@ body #carouselId .row .col-sm-4 img {
   height: 50px;
 }
 
+body table.table {
+  margin-bottom: 0;
+}
+
+body table.table tr {
+  background-color: #B7C8D3;
+  font-size: 16px;
+}
+
+body table.table tr img {
+  width: 130px;
+}
+
+body .container {
+  background-color: #CCDDE8;
+}
+
+body .container h5 {
+  padding: 0.5rem 1.5rem;
+  color: #08478C;
+}
+
+body .container .col-sm-6 > .container {
+  background-color: #B7C8D3;
+  padding: 1rem;
+  border-radius: 0.35rem;
+}
+
+body .container .col-sm-6 > .container p {
+  font-size: 13px;
+}
+
+body .container .col-sm-6 > .container p span {
+  color: #08478C;
+  font-weight: 700;
+}
+
+body footer .container {
+  padding: 1rem 0 0 0;
+}
+
 body footer .container .row {
   background-color: #B7C8D3;
+  padding: 1rem 0;
 }
 
 body footer .container .row .col-sm-6 > p {
